fixing navbar alignmnet

--- a/css/room.css
+++ b/css/room.css
@@ -22,8 +22,9 @@ body {
 }
 
 .navbar {
+  position: fixed;
+  top: 0;
   width: 88%;
-  margin: auto;
   padding: 15px 0; /* Fix: Comma changed to space for proper padding */
   display: flex;
   align-items: flex-start; /* Align items to the top */
